--- a/zero_rental_sale_property/views/property_menuitem.xml
+++ b/zero_rental_sale_property/views/property_menuitem.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         <menuitem id="property_mgt_root" name="Property Management"/>
         <menuitem id="property_mgt" name="Property" parent="property_mgt_root" sequence="1"/>
@@ -23,4 +23,4 @@
         <menuitem id="rental_tasks" name="Tasks" parent="property_mgt_root" sequence="7"/>
 
     </data>
-</openerp>
+</odoo>
