--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<openerp>
+<odoo>
     <data>
 
         <record id="view_property_action" model="ir.actions.act_window">
@@ -457,4 +457,4 @@
 		</record>
 
     </data>
-</openerp>
+</odoo>
