--- a/zero_rental_sale_property/views/rent_type.xml
+++ b/zero_rental_sale_property/views/rent_type.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<openerp>
+<odoo>
     <data>
 		<record id="maintenance_period_form_view" model="ir.ui.view">
             <field name="name">maintenance.period.form.view</field>
@@ -43,4 +43,4 @@
 		</record>
 
     </data>
-</openerp>
+</odoo>
