--- a/zero_rental_sale_property/views/sale_order.xml
+++ b/zero_rental_sale_property/views/sale_order.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<openerp>
+<odoo>
     <data>
        <record id="contract_sale_view_form" model="ir.ui.view">
             <field name="name">contract.sale.order.form</field>
@@ -26,4 +26,4 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
