--- a/zero_rental_sale_property/views/tenancy.xml
+++ b/zero_rental_sale_property/views/tenancy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<openerp>
-    <data noupdate="1">
+<odoo>
+    <data>
         <record id="sequence_contract_rental" model="ir.sequence">
             <field name="name">Contract Rental Sequence</field>
             <field name="code">contract.rental.sequence</field>
@@ -190,4 +190,4 @@
     </record>
 
     </data>
-</openerp>
+</odoo>
