--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -254,7 +254,7 @@
                                 <page string="Website">
                                     <group name="website" string="Website">
                                         <field name="website_url" invisible="1"/>
-                                        <!--<field name="public_categ_ids" widget="many2many_tags" string="Website Categories"/>-->
+                                        <field name="public_categ_ids" widget="many2many_tags" string="Website Categories"/>
                                         <field name="alternative_product_ids" string="Similar Properties" widget="many2many_tags"/>
                                     </group>
                                     <field name="product_image_ids" mode="kanban" context="{'default_name': name, 'default_product_tmpl_id': active_id}">
