--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -115,6 +115,7 @@
                                     <field name="property_type"/>
                                     <field name="property_manager"/>
                                     <field name="furnishing"/>
+				    <field name="finishing"/>
                                     <field name="bed_rooms"/>
                                     <field name="bath_rooms"/>
                                     <field name="garages"/>
