--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -41,7 +41,9 @@
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
                 <field name="barcode" position="replace"/>
-            </field>
+               <field name="category_id" position='after'>
+            <field name="barcode"/>
+           </field>
         </record>
 
         <record model="ir.ui.view" id="product_property_form_view">
@@ -80,8 +82,6 @@
                                 <div name="options" groups="base.group_user">
                                     <div>
                                         <field name="property_code"/>
-                                        <field name="grouped"/>
-                                        <label for="grouped"/>
                                     </div>
                                     <div>
                                         <field name="rent_ok"/>
@@ -111,10 +111,11 @@
                                     <field name="currency_id" readonly="False"/>
                                 </group>
                                 <group>
-                                    <field name="parent_id"  domain="[('grouped', '=', True)]"/>
+                                    <!---field name="parent_id"  domain="[('grouped', '=', True)]"/>-->
                                     <field name="property_type"/>
                                     <field name="property_manager"/>
                                     <field name="furnishing"/>
+				    <field name="finishing"/>
                                     <field name="bed_rooms"/>
                                     <field name="bath_rooms"/>
                                     <field name="garages"/>
@@ -227,18 +228,7 @@
                                             </group>
                                         </form>
                                     </field>
-                                </page>
-                                <page string="Sub Properties">
-                                        <field name="property_ids" mode="tree">
-                                            <tree>
-                                                <field name="name"/>
-                                                <field name="property_type"/>
-                                                <field name="asset_category_id"/>
-                                                <field name="value"/>
-                                                <field name="value_residual"/>
-                                                <field name="stage_id"/>
-                                            </tree>
-                                        </field>
+                                
                                 </page>
                                 <page string="Accounting">
                                     <group>
@@ -254,7 +244,7 @@
                                 <page string="Website">
                                     <group name="website" string="Website">
                                         <field name="website_url" invisible="1"/>
-                                        <!--<field name="public_categ_ids" widget="many2many_tags" string="Website Categories"/>-->
+                                        <field name="public_categ_ids" widget="many2many_tags" string="Website Categories"/>
                                         <field name="alternative_product_ids" string="Similar Properties" widget="many2many_tags"/>
                                     </group>
                                     <field name="product_image_ids" mode="kanban" context="{'default_name': name, 'default_product_tmpl_id': active_id}">
@@ -351,31 +341,6 @@
         </field>
     </record>
 
-
-
-        <!--Property Hierarchy-->
-        <record id="product_tree_hierarchy" model="ir.ui.view">
-            <field name="name">product.tree.hierarchy</field>
-            <field name="model">product.template</field>
-            <field name="field_parent">property_ids</field>
-            <field name="arch" type="xml">
-                <tree string="Product Hierarchy" toolbar="1" >
-                    <!--<field name="code" context="{'form_view_ref': 'account.view_account_form'}"/>-->
-                    <field name="name"/>
-                    <!--<field name="user_type_id"/>-->
-                    <!--<field name="currency_id" options="{'no_create': True}" groups="base.group_multi_currency"/>-->
-                    <!--<field name="company_id" options="{'no_create': True}" groups="base.group_multi_company"/>-->
-                </tree>
-            </field>
-        </record>
-
-        <record id="product_hierarchy_action" model="ir.actions.act_window">
-            <field name="name">Product Hierarchy</field>
-            <field name="res_model">product.template</field>
-            <field name="view_type">tree</field>
-            <field name="domain">[('parent_id','=',False)]</field>
-            <field name="view_id" ref="product_tree_hierarchy"/>
-        </record>
 
         <record model="ir.ui.view" id="property_type_tree_view">
 			<field name="name">property.type.tree.view</field>
