--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -6,7 +6,7 @@
             <field name="name">Properties</field>
             <field name="res_model">product.template</field>
             <field name="view_type">form</field>
-            <!--<field name="view_id" ref="product_property_stage_view"/>-->
+            <field name="view_id" ref="product_property_stage_view"/>
             <field name="view_mode">kanban,tree,form</field>
         </record>
 
@@ -20,7 +20,7 @@
             <field name="arch" type="xml">
 				<kanban position="attributes">
                 <attribute name="default_group_by">stage_id</attribute>
-                    <!--<field name="stage_id" options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>-->
+                    <field name="stage_id" options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>
                 </kanban>
                 <field name="image_small" position="after">
                     <field name="stage_id"/>
@@ -67,9 +67,9 @@
                                 <button class="oe_stat_button" name="website_publish_button" type="object" icon="fa-globe">
                                     <field name="website_published" widget="website_button"/>
                                 </button>
-                                <!--<button class="oe_stat_button" name="action_view_sales" type="object" icon="fa-usd">-->
-                                    <!--<field string="Sales" name="sales_count" widget="statinfo" />-->
-                               <!--</button>-->
+                                <button class="oe_stat_button" name="action_view_sales" type="object" icon="fa-usd">
+                                    <field string="Sales" name="sales_count" widget="statinfo" />
+                                </button>
                                <button name="action_view_contract" type="object" class="oe_stat_button" icon="fa-pencil-square-o">
                                     <field name="tenancy_count" widget="statinfo" string="Tenancy"/>
                                </button>
@@ -110,7 +110,7 @@
                                     <field name="currency_id" readonly="False"/>
                                 </group>
                                 <group>
-                                    <!---field name="parent_id"  domain="[('grouped', '=', True)]"/>-->
+                                    <field name="parent_id"  domain="[('grouped', '=', True)]"/>
                                     <field name="property_type"/>
                                     <field name="property_manager"/>
                                     <field name="furnishing"/>
@@ -120,10 +120,10 @@
                                     <field name="garages"/>
                                     <field name="facing"/>
                                     <field name="company_id" required="True" options="{'no_create': True}"/>
-                                    <!--<field name="ownership"/>-->
-                                    <!--<field name="condition"/>-->
-                                    <!--<field name="start_date"/>-->
-                                    <!--<field name="end_date"/>-->
+                                    <field name="ownership"/>
+                                    <field name="condition"/>
+                                    <field name="start_date"/>
+                                    <field name="end_date"/>
                                 </group>
                             </group>
                             <notebook>
