--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -40,8 +40,12 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
-                <field name="barcode" position="replace"/>
-            </field>
+		    <xpath expr="//field[@name='barcode']" position="after">
+
+                  <field name="categ_id"/>
+
+               </xpath>
+                
         </record>
 
         <record model="ir.ui.view" id="product_property_form_view">
