--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -42,7 +42,7 @@
             <field name="arch" type="xml">
 		    <xpath expr="//field[@name='barcode']" position="after">
 
-                  <field name="categ_id"/>
+                  <field name="category_id"/>
 
                </xpath>
                 </field>
