--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -40,9 +40,9 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
-		    <xpath expr="//field[@name='barcode']" position="after">
+		    <xpath expr="//field[@name='categ_id']" position="after">
 
-                  <field name="category_id"/>
+                  <field name="categ_id"/>
 
                </xpath>
                 </field>
