--- a/zero_rental_sale_property/views/property.xml
+++ b/zero_rental_sale_property/views/property.xml
@@ -40,9 +40,7 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//form" position="replace">
-                    <form string="categ_id">
-               </xpath>
+                <field name="barcode" position="replace"/>
                 </field>
 
         </record>
